# AdvCpp-HW

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  client_side_async.cpp  func.cpp  main.cpp  test_Process.cpp
http/: CMakeLists.txt
http/example/: client.cpp  fileGenerator.cpp  main.cpp  server.cpp
http/include/HTTP/: BaseHTTPServer.h  HTTPMessage.h  HTTPMessageData.h
http/include/bigFile/: FileEntry.h  Mmap.h  Reader.h
http/include/coroutines/: coroutine.h
http/include/data/: Descriptor.h
http/include/exceptions/: Exceptions.h
http/include/log/: Log.h  LogFormat.h  Loggers.h
http/include/tcp/: Connection.h  ConnectionAsync.h
http/src/HTTP/: BaseHTTPServer.cpp  HTTPMessage.cpp  HTTPMessageData.cpp
http/src/bigFile/: Mmap.cpp
http/src/coroutines/: coroutine.cpp
http/src/data/: Descriptor.cpp
http/src/exceptions/: Exceptions.cpp
http/src/log/: Log.cpp  Loggers.cpp
http/src/tcp/: Connection.cpp  ConnectionAsync.cpp
hw1-Process/example/: func.cpp  test_Process.cpp
hw1-Process/include/: Descriptor.hpp  Process.hpp
hw1-Process/src/: Exceptions.cpp  Process.cpp
hw2-Logger/example/: test_logger.cpp
hw2-Logger/include/: LogFormat.h  LogFormat.hpp  Loggers.h  Loggers.hpp  log.h  log.hpp
hw2-Logger/src/: Loggers.cpp  log.cpp
hw3-Basic_TCP_Server/: CMakeLists.txt
hw3-Basic_TCP_Server/include/: Connection.h  Server.h  Socket.hpp  tcp.h
hw3-Basic_TCP_Server/src/: Connection.cpp  Descriptor.cpp  Server.cpp  Socket.cpp
hw4-Async_TCP_Server/: CMakeLists.txt
hw4-Async_TCP_Server/example/: CMakeLists.txt  client_side.cpp  client_side_async.cpp  server_side.cpp  server_side_async.cpp
hw4-Async_TCP_Server/include/: Connection.hpp  ConnectionAsync.h  ConnectionAsync.hpp  Server.hpp  ServerAsync.h  ServerAsync.hpp  Socket.h  SocketAsync.hpp  tcp.hpp  tcp_async.hpp
hw4-Async_TCP_Server/src/: Connection.cpp  ConnectionAsync.cpp  Exceptions.cpp  ServerAsync.cpp  SocketAsync.cpp
hw5-Shared_Memory_IPC/: CMakeLists.txt
hw5-Shared_Memory_IPC/example/: CMakeLists.txt  client.cpp
hw5-Shared_Memory_IPC/include/: Allocator.h  Map.hpp  Semaphore.hpp  SharedMemory.h  SharedMemory.hpp
hw5-Shared_Memory_IPC/src/: Semaphore.cpp  SharedMemory.cpp
hw6-HTTP_Server_Framework/example/: main.cpp
hw6-HTTP_Server_Framework/include/HTTP/: BaseHTTPServer.hpp
hw6-HTTP_Server_Framework/include/coroutines/: coroutine.h
hw6-HTTP_Server_Framework/include/exceptions/: Exceptions.hpp
hw6-HTTP_Server_Framework/include/log/: Log.hpp  Loggers.h  Loggers.hpp
hw6-HTTP_Server_Framework/include/tcp/: Connection.hpp  ConnectionAsync.hpp  Socket.h
hw6-HTTP_Server_Framework/src/HTTP/: BaseHTTPServer.cpp  HTTPMessage.cpp  HTTPMessageData.cpp
hw6-HTTP_Server_Framework/src/coroutines/: coroutine.cpp
hw6-HTTP_Server_Framework/src/data/: Descriptor.cpp
hw6-HTTP_Server_Framework/src/exceptions/: Exceptions.cpp
hw6-HTTP_Server_Framework/src/log/: Log.cpp  Loggers.cpp
hw6-HTTP_Server_Framework/src/tcp/: Connection.cpp  ConnectionAsync.cpp  Socket.cpp
hw7-Shared_Memory_File/: CMakeLists.txt
hw7-Shared_Memory_File/example/: client.cpp  fileGenerator.cpp  server.cpp
hw7-Shared_Memory_File/include/HTTP/: BaseHTTPServer.h  HTTPMessage.hpp  (+2 more)
include/: Descriptor.h  Exceptions.h  Process.h
include/data/: Descriptor.h
include/log/: Log.h  Loggers.h
log/: CMakeLists.txt
log/example/: CMakeLists.txt  test_logger.cpp
log/include/: LogFormat.h  Loggers.h  log.h
log/src/: LogFormat.cpp  Loggers.cpp  log.cpp
shmem/example/: client.cpp
shmem/include/: Allocator.h  Exceptions.h  Map.h  Semaphore.h  SharedMemory.h  Shmem.h
shmem/src/: Exceptions.cpp  Semaphore.cpp  SharedMemory.cpp
src/: Descriptor.cpp  Exceptions.cpp  Process.cpp
src/HTTP/: HTTPMessage.cpp
tcp/: CMakeLists.txt
tcp/example/: CMakeLists.txt  client_side.cpp  client_side_async.cpp  server_side.cpp  server_side_async.cpp
tcp/include/: Connection.h  ConnectionAsync.h  Exceptions.h  Server.h  ServerAsync.h  Socket.h  SocketAsync.h  tcp_async.h
tcp/src/: Connection.cpp  ConnectionAsync.cpp  Descriptor.cpp  Exceptions.cpp  Server.cpp  ServerAsync.cpp  Socket.cpp  SocketAsync.cpp
(+23 files in other folders)
